# internship_with_mmcv

./: .gitignore  pyproject.toml  requirements.txt  setup.py
configs/early_fusion/: early_fusion_config.py  early_fusion_config_json.py  early_fusion_config_json_xsub.py  early_fusion_config_json_xview.py  early_fusion_config_xsub.py  early_fusion_config_xview.py  early_fusion_stack_all.py
configs/late_only/: rgbpose_conv3d_late_only_cat.py  rgbpose_conv3d_late_only_cat_temp_xsub.py  rgbpose_conv3d_late_only_cat_temp_xsub_json.py  rgbpose_conv3d_late_only_cat_temp_xview.py  rgbpose_conv3d_late_only_cat_temp_xview_json.py  rgbpose_conv3d_late_only_cat_xsub.py  rgbpose_conv3d_late_only_cat_xsub_json.py  rgbpose_conv3d_late_only_cat_xview.py  rgbpose_conv3d_late_only_cat_xview_json.py  rgbpose_conv3d_late_only_sum_xsub.py  rgbpose_conv3d_late_only_sum_xsub_json.py  rgbpose_conv3d_late_only_sum_xview.py  rgbpose_conv3d_late_only_sum_xview_json.py  rgbpose_conv3d_late_only_weighted_sum_xsub.py  rgbpose_conv3d_late_only_weighted_sum_xsub_json.py  rgbpose_conv3d_late_only_weighted_sum_xview.py  rgbpose_conv3d_late_only_weighted_sum_xview_json.py
configs/lateral_late/: rgbpose_conv3d_lateral_late_cat.py  rgbpose_conv3d_lateral_late_cat_temp_xsub.py  rgbpose_conv3d_lateral_late_cat_temp_xsub_json.py  rgbpose_conv3d_lateral_late_cat_temp_xview.py  rgbpose_conv3d_lateral_late_cat_temp_xview_json.py  rgbpose_conv3d_lateral_late_cat_xsub.py  rgbpose_conv3d_lateral_late_cat_xview.py  (+12 more)
poseConv/: __init__.py  utils.py
splits/: xsub_val.txt
tools/: pkl_data.npy  test.py  train.py
(+38 files in other folders)
