[project]
name = "poseConv"
description = "poseConv"
version = "0.1.0"
authors = [
    { name = "Samuel Kostadinov", email = "samuel.kostadinov@studenti.unitn.it" }
]

dependencies = [
    "mmcv-full==1.5.0",
    "torch~=2.0.1",
    "torchvision~=0.15.2",
    "numpy",
    "requests",
    "scipy~=1.11.1"

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"